# library-publisher

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.txt  manage.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_users_table.py  002_add_user_delivery_address.py  003_add_books_and_copies.py  004_add_deliveries_and_reservations.py  005_add_user_role.py  006_books_reference_models.py  007_author_extended_fields.py  008_books_many_authors.py  009_add_book_queue.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  catalog.py  deps.py  queue.py  reservations.py
backend/app/core/: config.py  database.py  library_rules.py  security.py
backend/app/helpers/: __init__.py  authors.py
backend/app/models/: __init__.py  age_rating.py  author.py  book.py  book_queue.py  delivery.py  genre.py  language.py  tag.py  user.py
backend/app/schemas/: __init__.py  admin.py  book.py  reservation.py  user.py
backend/app/services/: __init__.py  csv_parser.py  import_catalog.py
deploy/: docker-compose.nginx.yml  nginx-progs-nik.ru.conf
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/public/fonts/: README.txt
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  auth.ts  catalog.ts  client.ts  queue.ts  reservations.ts
frontend/src/assets/: icons.ts
frontend/src/components/: BookCard.vue  ChipSelect.vue  (+1 more)
(+24 files in other folders)
